--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"moment": "^2.18.1",
+		"moment-timezone": "^0.5.13",
 		"native-base": "^2.3.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
-		"react-native-calendars": "^1.5.5"
+		"react-native-calendars": "^1.5.5",
+		"react-native-firebase": "^2.0.5"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
