--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
 		"react-native-calendars": "^1.5.5",
 		"react-native-firebase": "^2.0.5"
 	},
+	"rnpm": {
+		"assets": [
+			"./App/Assets/fonts/"
+		]
+	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
 		"babel-preset-react-native": "2.1.0",
