--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
 		"react-native-calendars": "^1.5.5",
-		"react-native-firebase": "^2.0.5"
+		"react-native-firebase": "^2.0.5",
+		"react-native-orientation": "^2.1.0"
 	},
 	"rnpm": {
 		"assets": [
