--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"react-native": "0.46.4",
 		"react-native-calendars": "^1.5.5",
 		"react-native-firebase": "^2.0.5",
-		"react-native-orientation": "^2.1.0"
+		"react-native-orientation": "^2.1.0",
+		"react-navigation": "^1.0.0-beta.11"
 	},
 	"rnpm": {
 		"assets": [
